--- a/Practice_2020/JS-19/app/index.html
+++ b/Practice_2020/JS-19/app/index.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="css/app.min.css">
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="js/plugins/1jquery.jcarousel.js"></script>
-    <script src="js/plugins/jcarousel.basic.js"></script>
     <script src="js/app.min.js"></script>
 
 </head>
@@ -19,6 +17,8 @@
 
     <div class="wrapper">
 
+
+<!--HEADER-->
         <header  class="wrapper__header">
 
             <div class="container  header">
@@ -39,7 +39,7 @@
                             <% for (let i = 0; i < socials.length ; i++) { %>
 
                                 <a href="<%=socials[i].iconLink%>" class="social__link" target="_blank">
-                                    <%=socials[i].svgIcon%>
+                                    <%=socials[i].iconSvg%>
                                 </a>
 
                             <% } %>
@@ -54,7 +54,11 @@
 
 
 
+
+
+<!--MAIN NAVIGATION-->
         <div     class="wrapper__header-nav"  id="home">
+
           <h2 class="visually-hidden">Main navigation</h2>
 
             <div class="container  header-nav">
@@ -100,15 +104,18 @@
 
 
 
+
+
+<!--CAROUSEL-->
         <div     class="wrapper__carousel">
 
             <div class="container">
 
               <div  class="slider carousel">
 
-                      <div><img src="img/dist/carousel-img1.png" width="100%"  height="400px" alt=""></div>
-                      <div><img src="img/dist/carousel-img2.jpg"  width="100%" height="400px" alt=""></div>
-                      <div><img src="img/dist/carousel-img3.jpg" width="100%" height="400px" alt=""></div>
+                <div><img src="img/dist/carousel-img1.png" width="100%" height="400px" alt=""></div>
+                <div><img src="img/dist/carousel-img2.jpg" width="100%" height="400px" alt=""></div>
+                <div><img src="img/dist/carousel-img3.jpg" width="100%" height="400px" alt=""></div>
 
               </div>
 
@@ -119,72 +126,76 @@
 
 
 
+
+
+<!--FEATURES-->
         <section class="wrapper__features"  id="features">
 
           <h2 class="visually-hidden">Features</h2>
 
           <div class="container features">
 
-            <article class="article  features__article">
 
-              <div class="article__number">01</div>
+            <article class="features__item">
 
-              <div class="article__body">
+              <div class="features__number text__header_size_l">01</div>
 
-                  <div class="article__icon_settings" ></div>
+              <div class="features__body">
 
-                  <h3 class="article__name">Power Inside</h3>
+                  <div class="features__icon_settings"></div>
 
-                  <p class="article__text  text">Cum sociis natoque penatibus et
+                  <h3 class="features__name text__header_size_m">Power Inside</h3>
+
+                  <p class="features__text  text">Cum sociis natoque penatibus et
                       magnis dis parturient montesmus. Pro vel nibh et elit mollis
                       commodo et nec augueique Nemo enim ipsam voluptatem quia
                       ptas sit aspernatur samomo enim ipsam voluptatem.</p>
 
-                  <a class="article__link" href="/">Read More</a>
+                  <a class="features__link text__link" href="/">Read More</a>
 
               </div>
 
             </article>
 
 
-            <article class="article  features__article"">
+            <article class="features__item">
 
-              <div class="article__number">02</div>
+              <div class="features__number text__header_size_l">02</div>
 
-              <div class="article__body">
+              <div class="features__body">
 
-                <div class="article__icon_params" ></div>
+                <div class="features__icon_params" ></div>
 
-                <h3 class="article__name">new technologies</h3>
+                <h3 class="features__name text__header_size_m">new technologies</h3>
 
-                <p class="article__text  text">Cum sociis natoque penatibus et
+                <p class="features__text  text">Cum sociis natoque penatibus et
                     magnis dis parturient montesmus. Pro vel nibh et elit mollis
                      commodo et nec augueique Nemo enim ipsam voluptatem quia
                      ptas sit aspernatur samomo enim ipsam voluptatem.</p>
 
-                <a class="article__link" href="/">Read More</a>
+                <a class="features__link text__link" href="/">Read More</a>
 
               </div>
 
             </article>
 
 
-            <article class="article  features__article"">
+            <article class="features__item">
 
-              <div class="article__number">03</div>
+              <div class="features__number text__header_size_l">03</div>
 
-              <div class="article__body">
+              <div class="features__body">
 
-                <div class="article__icon_truck" ></div>
+                <div class="features__icon_truck" ></div>
 
-                <h3 class="article__name">fast support</h3>
+                <h3 class="features__name text__header_size_m">fast support</h3>
 
-                <p class="article__text  text">Cum sociis natoque penatibus et
+                <p class="features__text  text">Cum sociis natoque penatibus et
                     magnis dis parturient montesmus. Pro vel nibh et elit mollis
                      commodo et nec augueique Nemo enim ipsam voluptatem quia
                      ptas sit aspernatur samomo enim ipsam voluptatem.</p>
 
-                <a class="article__link" href="/">Read More</a>
+                <a class="features__link  text__link" href="/">Read More</a>
 
               </div>
 
@@ -193,26 +204,143 @@
           </div>
         </section>
 
+
+
+
+
+<!--SERVICES LIST-->
         <main    class="wrapper__services"   id="services">
 
-            <h2 class="visually-hidden">Our Services</h2>
+          <div class="container">
 
-            <div class="container">
+            <h2 class="text__header">Our Services</h2>
+
+            <div class="service">
+
+
+                <div class="service__item">
+
+                  <a href="/" class="service__link  text__link  text__link_size_m">
+                    <img class="service__image"  src="img/dist/services-img1.png" alt="Schedule Services">
+                    <span>Schedule Services</span>
+                  </a>
+
+                </div>
+
+
+                <div class="service__item">
+
+                    <a href="/" class="service__link  text__link  text__link_size_m">
+                      <img class="service__image" src="img/dist/services-img2.png" alt="Preventive Maintence">
+                      <span>Preventive Maintence</span>
+                    </a>
+
+                </div>
+
+
+                <div class="service__item">
+
+                  <a href="/" class="service__link  text__link  text__link_size_m">
+                    <img class="service__image"  src="img/dist/services-img3.png" alt="Tire & Wheel Services">
+                    <span>Tire & Wheel Services</span>
+                  </a>
+
+                </div>
+
+
+                <div class="service__item">
+
+                  <a href="/" class="service__link  text__link  text__link_size_m">
+                    <img class="service__image"  src="img/dist/services-img4.png" alt="Repair Services">
+                    <span>Repair Services</span>
+                  </a>
+
+                </div>
 
             </div>
+
         </main>
+
+
+
+
+
+<!--LATEST NEWS & BANNERS PLACE-->
+        <section class="wrapper__news">
+            <div class="container  news">
+
+    <!--LATEST NEWS-->
+              <div class="latest-news">
+
+                <h2 class="text__header">Latest News</h2>
+
+                <article class="media ">
+
+                    <div class="media__item">
+                      <div class="media__date">
+                        <div class="media__month">Jan</div>
+                        <div class="media__day">23</div>
+                      </div>
+                      <img class="media__img" src="img/dist/news-img1.png"/>
+                    </div>
+
+                    <div class="media__body">
+
+                      <h3 class="">
+                        <a href="/" class="text__link text__header_size_s">
+                          Advanced Machinery Helps Improve Quality
+                        </a>
+                      </h3>
+
+                      <p>Cum sociis natoque penatibus et magnis dis parturient
+                         ontesmus. Pro vel nibh et elit mollis commodo et nec
+                         augueique Nemo enim ipsam voluptatem quia ptas sit
+                         aspernatur samomo enim ipsam voluptatem.</p>
+                    </div>
+
+
+                </article>
+
+                <article class=" media">
+
+                    <div class="media__item">
+                      <img src="img/dist/news-img2.png"/>
+                    </div>
+
+                    <div class="media__body">
+
+                      <h3 class="text__header_size_s">
+                        <a href="/" class="text__link text__header_size_s">
+                          Advanced Machinery Helps Improve Quality
+                        </a>
+                      </h3>
+
+                      <p>Cum sociis natoque penatibus et magnis dis parturient
+                         ontesmus. Pro vel nibh et elit mollis commodo et nec
+                         augueique Nemo enim ipsam voluptatem quia ptas sit
+                         aspernatur samomo enim ipsam voluptatem.</p>
+                    </div>
+
+
+                </article>
+
+              </div>
+
+
+              <div class="banners-place">
+                <h2 class="text__header">Banners Place</h2>
+
+              </div>
+            </div>
+
+
+        </section>
 
         <aside   class="wrapper__banners">
             <div class="container">
 
             </div>
         </aside>
-
-        <section class="wrapper__news">
-            <div class="container">
-
-            </div>
-        </section>
 
         <footer  class="wrapper__footer">
             <div class="container">
