added Banners block

--- a/Practice_2020/JS-19/app/index.html
+++ b/Practice_2020/JS-19/app/index.html
@@ -267,7 +267,7 @@
 
 
 <!--LATEST NEWS & BANNERS PLACE-->
-        <section class="wrapper__news">
+        <section class="wrapper__news"  id="news">
 
             <div class="container  news">
 
@@ -328,7 +328,7 @@
               </div>
 
 
-              <div class="banners-place  news__item">
+              <div class="news__item">
 
                 <h2 class="text__header">Banners Place</h2>
 
@@ -371,7 +371,31 @@
         </section>
 
         <aside   class="wrapper__banners">
-            <div class="container">
+            <div class="container  banners">
+
+                <a target="_blank" href="https://www.rollingbigpower.com/">
+                    <img src="img/dist/banners-img1.png" alt="https://www.rollingbigpower.com/">
+                </a>
+
+                <a target="_blank" href="https://www.motometalwheels.com/">
+                    <img src="img/dist/banners-img2.png" alt="https://www.motometalwheels.com/">
+                </a>
+
+                <a target="_blank" href="https://www.2crave.com/">
+                    <img src="img/dist/banners-img3.png" alt="https://www.2crave.com/">
+                </a>
+
+                <a target="_blank" href="https://www.atxwheels.com/">
+                    <img src="img/dist/banners-img4.png" alt="https://www.atxwheels.com/">
+                </a>
+
+                <a target="_blank" href="http://www.cruiseralloy.com/">
+                    <img src="img/dist/banners-img5.png" alt="http://www.cruiseralloy.com/">
+                </a>
+
+                <a target="_blank" href="https://www.gearoffroad.com/">
+                    <img src="img/dist/banners-img6.png" alt="https://www.gearoffroad.com/">
+                </a>
 
             </div>
         </aside>
